--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -3,7 +3,7 @@
 language: zh_CN
 
 # 默认称号
-default: "§f[ §7玩家 §f]"
+default: "§f[ §7萌新 §f]"
 
 # 请在添加称号前修改默认前缀和后缀,不然之后修改只对之后新增的生效
 # 称号默认前缀
@@ -44,11 +44,11 @@ isCheckUpdate: true
 # op登录时候是否发送更新提醒
 isCheckUpdateToOpMsg: true
 
-# 是否开启云汉化(使用云服务资源来进行各种物品名称的自动汉化)
-cloudChinesization: true
-
 # 玩家自定义称号长度限制
 customLength: 16
+
+# 禁用buff的世界(不设置默认不启用)
+disabledBuffWorld: []
 
 # 完全版本签名验证
 sign: 123456
