--- a/src/resources/gui/select.yml
+++ b/src/resources/gui/select.yml
@@ -1,5 +1,6 @@
 # gui标题
 title: "&f[&e称号功能选择&f]"
+size: 27
 
 # 是否开启该功能,如果开启 在称号仓库中右键点击后会进入二级选择页面,可以分别设置展示,属性,粒子三种称号,三个变量
 # 如果关闭 在称号仓库中右键无法进入该gui页面,效果跟直接左键一样,只能使用一个称号同时包含全部信息
@@ -25,7 +26,7 @@ show:
     - '&8▪ &7点击设置为&a展示&7称号'
     - '&8▪ &7你只能设置一个&a展示&7称号'
     - ''
-    - ' &8[&a✔&8] &7点击切换'
+    - ' &8[&a✔&8] &a点击切换'
 
 # 属性称号(中缀)  对应变量 %playerTitle_use_buff%
 buff:
@@ -41,7 +42,7 @@ buff:
     - '&8▪ &7点击设置为&a属性&7称号'
     - '&8▪ &7你只能设置一个&a属性&7称号'
     - ''
-    - ' &8[&a✔&8] &7点击切换'
+    - ' &8[&a✔&8] &a点击切换'
 
 # 粒子称号(后缀)  对应变量 %playerTitle_use_particle%
 particle:
@@ -57,7 +58,7 @@ particle:
     - '&8▪ &7点击设置为&a粒子&7称号'
     - '&8▪ &7你只能设置一个&a粒子&7称号'
     - ''
-    - ' &8[&a✔&8] &7点击切换'
+    - ' &8[&a✔&8] &a点击切换'
 
 # ${useStatus}对应的变量
 yesStatus: "&a设置中"
