--- a/src/resources/import.yml
+++ b/src/resources/import.yml
@@ -17,8 +17,8 @@ example:
   description:
     - "&e这是一个示例称号"
     - "&f使用指令/plt title import即可导入"
-  # 称号buff类型 attribute_plus 或 sx_attribute
-  buffType: "sx_attribute"
+  # 称号buff类型 attribute_plus,sx_attribute,AttributeSystem
+  buffType: "attribute_plus"
   # 称号具体buff
   buff:
     - '&e物理伤害: 1'
