--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -20,6 +20,7 @@ isChatFormat: " "
 
 # tab列表和玩家头顶显示称号,默认关闭
 # 跟计分板插件冲突,请使用变量功能进行兼容
+# Folia核心目前无法使用该功能(1.20.x)
 isTab: false
 
 # 是否开启兼容模式-变量可以在essChat中使用
