--- a/src/resources/import.yml
+++ b/src/resources/import.yml
@@ -1,5 +1,5 @@
 example:
-  # 是否已导入,导入过的会变为true
+  # 是否已导入,导入过的会变为true，无法重复导入
   enable: false
   # 称号名称
   titleName: "&e小富豪"
@@ -17,10 +17,13 @@ example:
   description:
     - "&e这是一个示例称号"
     - "&f使用指令/plt title import即可导入"
-  # 称号buff类型 attribute_plus,sx_attribute,AttributeSystem
+  # 称号buff类型 attribute_plus,sx_attribute,AttributeSystem,MythicLib
   buffType: "attribute_plus"
   # 称号具体buff
   buff:
+    - '&e物理伤害: 1'
+  # 称号buff描述 用于MythicLib类型添加描述 必须跟buff节点条数一致
+  buffDescription:
     - '&e物理伤害: 1'
 example2:
   enable: false
